  * Dependencies are now by alpha order.
  * Removed useless empty cinder-volume.postrm, cinder-api.postrm,
  cinder-scheduler.postinst, cinder-scheduler.postrm.
  * Pre-Depends: dpkg (>= 1.15.6~) because we use xz compression.
  * Asks for admin tenant, user and password with debconf, patches
  api-paste.ini so it is syntaxicaly correct.

 -- Mehdi Abaakouk <sileht@sileht.net>  Sat, 29 Sep 2012 09:23:22 +0200

cinder (2012.2~rc1+git1~6b31057-1) experimental; urgency=low

  * First debian release

 -- Mehdi Abaakouk <sileht@sileht.net>  Thu, 13 Sep 2012 15:52:06 +0200

cinder (2012.2~rc1~20120907.230-0ubuntu4) quantal; urgency=low

  [Chuck Short]
  * New upstream version.
  * debian/cinder.conf: Fix path for cinder-rootwrap. (LP: #1045438) 
  * debian/control: Add python-glanceclient as a dep. 
  * debian/cinder-common.postinst: Fix chmod thinko.
  * debian/*.upstart: Specify the configuration files.

  [Soren Hansen]
  * Update debian/watch to account for symbolically named tarballs and
    use newer URL.
  * Fix Launchpad URLs in debian/watch.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 07 Sep 2012 11:27:55 -0500

cinder (2012.2~f3-0ubuntu3) quantal; urgency=low

  * debian/cinder.conf: Re-add sql_connection and set it to sqllite.

 -- Chuck Short <zulcss@ubuntu.com>  Wed, 22 Aug 2012 20:14:41 -0500

cinder (2012.2~f3-0ubuntu2) quantal; urgency=low

  * debian/cinder.conf: Get rid of deprecated warnings.
    (LP: #1036240) 

 -- Chuck Short <zulcss@ubuntu.com>  Sun, 19 Aug 2012 13:36:22 -0500

cinder (2012.2~f3-0ubuntu1) quantal; urgency=low

  * New upstream version.
  * debian/patches/0001-Use-setuptools-git.patch: Dropped
  * debian/control: Add python-glanceclient

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 17 Aug 2012 10:18:57 -0500

cinder (2012.2~f3~20120809.102-0ubuntu2) quantal; urgency=low

  * debian/cinder.conf, cinder-common.install: Use rootwrap.conf. (LP: #1036240) 
  * debian/control: Drop python-babel.
