@@ -26,7 +26,23 @@ CINDER_ENABLE=${CINDER_ENABLE}" >${CINDER_COM_DEF}
 pkgos_var_user_group cinder
 manage_cinder_enable
 pkgos_dbc_read_conf ${CINDER_CONF} cinder DEFAULT sql_connection $@
-set -x
 pkgos_read_admin_creds ${CINDER_API} cinder filter:authtoken
+
+pkgos_get_config ${CINDER_CONF} volume_group DEFAULT
+if [ -n "${RET}" ] ; then
+	db_set cinder/volume_group "${RET}"
+else
+	db_get cinder/volume_group
+	if [ -z "${RET}" ] && [ -x /sbin/vgdisplay ] ; then
+		# Since we have no prior value, try to guess it from vgdisplay
+		VGDISP=`vgdisplay -c | head -n 1`
+		if [ -n "${VGDISP}" ] ; then
+			VGNAME=`echo ${VGDISP} | cut -d: -f1`
+			db_set cinder/volume_group ${VGNAME}
+		fi
+	fi
+fi
+db_input high cinder/volume_group || true
+db_go
 
 exit 0
