@@ -16,6 +16,12 @@ if [ "$1" = "configure" ] || [ "$1" = "reconfigure" ] ; then
 	pkgos_write_new_conf cinder api-paste.ini
 	pkgos_dbc_postinst ${CINDER_CONF} cinder DEFAULT sql_connection $@
 	pkgos_write_admin_creds ${CINDER_API} cinder filter:authtoken
+	db_get cinder/volume_group
+	if [ -n "${RET}" ] ; then
+		pkgos_edit_config volume_group ${RET} ${CINDER_CONF} DEFAULT
+	fi
+
+	db_stop
 
 	chmod 0440 /etc/sudoers.d/cinder-common
 	echo "Now calling cinder-manage db sync: this may take a while..."
