@@ -6,7 +6,7 @@ if [ "$1" = "purge" ] && [ -f /usr/share/debconf/confmodule ] ; then
 	if [ -f /usr/share/debconf/confmodule ] ; then
 		. /usr/share/debconf/confmodule
 
-		db_get cinder/configure_db
+		db_get cinder/configure_db || true
 		if [ "$RET" = "true" ]; then
 			if [ -f /usr/share/dbconfig-common/dpkg/postrm ]; then
 				. /usr/share/dbconfig-common/dpkg/postrm
