@@ -19,6 +19,8 @@ cinder (2012.2-1) experimental; urgency=low
   * Pre-Depends: dpkg (>= 1.15.6~) because we use xz compression.
   * Asks for admin tenant, user and password with debconf, patches
   api-paste.ini so it is syntaxicaly correct.
+  * Auto-detects a valide volume group name, and prompt the user with debconf
+  about it.
 
  -- Mehdi Abaakouk <sileht@sileht.net>  Sat, 29 Sep 2012 09:23:22 +0200
 
